[gd_scene load_steps=16 format=2]

[ext_resource path="res://Scenes/MountainBackground.tscn" type="PackedScene" id=1]
[ext_resource path="res://Assets/Fonts/Silkscreen-Regular.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://Scripts/MainMenu.gd" type="Script" id=3]
[ext_resource path="res://Assets/LevelImages/Level1.png" type="Texture" id=4]

[sub_resource type="DynamicFont" id=1]
size = 44
outline_size = 2
outline_color = Color( 0.0156863, 0.00392157, 0.00392157, 1 )
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=2]
size = 18
font_data = ExtResource( 2 )

[sub_resource type="StyleBoxFlat" id=3]
bg_color = Color( 0.0196078, 0.219608, 0.352941, 1 )
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color( 0.831373, 0.831373, 0.87451, 1 )
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="StyleBoxFlat" id=4]
bg_color = Color( 0.0705882, 0.615686, 0.984314, 1 )
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color( 0.831373, 0.831373, 0.87451, 1 )
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="StyleBoxFlat" id=5]
bg_color = Color( 0.0392157, 0.513726, 0.835294, 1 )
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color( 0.831373, 0.831373, 0.87451, 1 )
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="Theme" id=11]

[sub_resource type="DynamicFont" id=8]
font_data = ExtResource( 2 )

[sub_resource type="StyleBoxFlat" id=6]
bg_color = Color( 0.639216, 0.607843, 0.607843, 0.486275 )
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color( 0.8, 0.8, 0.8, 0 )

[sub_resource type="StyleBoxFlat" id=7]
bg_color = Color( 1, 1, 1, 0 )

[sub_resource type="DynamicFont" id=9]
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=10]
font_data = ExtResource( 2 )

[node name="MainMenu" type="Node2D"]
script = ExtResource( 3 )

[node name="Mountains" parent="." instance=ExtResource( 1 )]

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Control" type="Control" parent="CanvasLayer"]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="Title" type="Label" parent="CanvasLayer/Control"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -141.0
margin_top = 100.0
margin_right = 141.0
margin_bottom = 57.0
custom_fonts/font = SubResource( 1 )
text = "Run 4 Fun"

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/Control"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -74.5
margin_top = 180.0
margin_right = 74.5
margin_bottom = 152.0
custom_constants/separation = 15
alignment = 1

[node name="StartButton" type="Button" parent="CanvasLayer/Control/VBoxContainer"]
margin_right = 149.0
margin_bottom = 40.0
rect_min_size = Vector2( 100, 40 )
custom_fonts/font = SubResource( 2 )
custom_styles/hover = SubResource( 3 )
custom_styles/pressed = SubResource( 4 )
custom_styles/normal = SubResource( 5 )
text = "start"

[node name="LeaderboardButton" type="Button" parent="CanvasLayer/Control/VBoxContainer"]
margin_top = 55.0
margin_right = 149.0
margin_bottom = 95.0
rect_min_size = Vector2( 100, 40 )
custom_fonts/font = SubResource( 2 )
custom_styles/hover = SubResource( 3 )
custom_styles/pressed = SubResource( 4 )
custom_styles/normal = SubResource( 5 )
text = "Leaderboard"

[node name="QuitButton" type="Button" parent="CanvasLayer/Control/VBoxContainer"]
margin_top = 110.0
margin_right = 149.0
margin_bottom = 150.0
rect_min_size = Vector2( 100, 40 )
custom_fonts/font = SubResource( 2 )
custom_styles/hover = SubResource( 3 )
custom_styles/pressed = SubResource( 4 )
custom_styles/normal = SubResource( 5 )
text = "Quit"

[node name="LevelImage" type="TextureButton" parent="CanvasLayer/Control"]
margin_left = 387.0
margin_top = 371.2
margin_right = 637.0
margin_bottom = 546.2
grow_horizontal = 2
grow_vertical = 2
rect_min_size = Vector2( 250, 175 )
theme = SubResource( 11 )
texture_normal = ExtResource( 4 )
expand = true

[node name="HBoxContainer" type="HBoxContainer" parent="CanvasLayer/Control"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -124.0
margin_top = -25.0
margin_right = 124.0

[node name="BackButton" type="Button" parent="CanvasLayer/Control/HBoxContainer"]
margin_right = 20.0
margin_bottom = 25.0
rect_min_size = Vector2( 20, 25 )
custom_fonts/font = SubResource( 8 )
custom_styles/hover = SubResource( 6 )
custom_styles/normal = SubResource( 7 )
text = "<"

[node name="Select" type="Label" parent="CanvasLayer/Control/HBoxContainer"]
margin_left = 24.0
margin_right = 224.0
margin_bottom = 25.0
rect_min_size = Vector2( 200, 25 )
custom_fonts/font = SubResource( 9 )
text = "Select Level"
align = 1

[node name="FwdButton" type="Button" parent="CanvasLayer/Control/HBoxContainer"]
margin_left = 228.0
margin_right = 248.0
margin_bottom = 25.0
rect_min_size = Vector2( 20, 25 )
custom_fonts/font = SubResource( 10 )
custom_styles/hover = SubResource( 6 )
custom_styles/normal = SubResource( 7 )
text = ">"

[connection signal="pressed" from="CanvasLayer/Control/VBoxContainer/StartButton" to="." method="_on_StartButton_pressed"]
[connection signal="pressed" from="CanvasLayer/Control/VBoxContainer/LeaderboardButton" to="." method="_on_LeaderboardButton_pressed"]
[connection signal="pressed" from="CanvasLayer/Control/VBoxContainer/QuitButton" to="." method="_on_QuitButton_pressed"]
[connection signal="mouse_entered" from="CanvasLayer/Control/LevelImage" to="." method="_on_LevelImage_mouse_entered"]
[connection signal="mouse_exited" from="CanvasLayer/Control/LevelImage" to="." method="_on_LevelImage_mouse_exited"]
[connection signal="pressed" from="CanvasLayer/Control/LevelImage" to="." method="_on_LevelImage_pressed"]
